<resources>
  <string name="app_name">Classroom OS</string>
</resources>